tests/golden/fixtures/prefix-dp-out-of-range/expected.err
Error: forced direct-page operand value out of range (must fit in 0x00..=0xFF)
   ╭─[ tests/golden/fixtures/prefix-dp-out-of-range/input.k65:5:5 ]
   │
 5 │     lda dp hi
   │     ────┬────  
   │         ╰────── here
───╯
